force-app/main/default/objects/Order__c/fields/Credits_Used__c.field-meta.xml
<CustomField>
    <fullName>Credits_Used__c</fullName>
    <label>Credits_Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>