force-app/main/default/objects/Order__c/fields/Delivery_Agent__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery_Agent</label>
    <referenceTo>Delivery_Agent__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>