force-app/main/default/objects/Order__c/fields/Delivery_Done_At__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Done_At__c</fullName>
    <label>Delivery_Done_At</label>
    <type>DateTime</type>
</CustomField>