force-app/main/default/objects/Order__c/fields/External_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Id__c</fullName>
    <label>External_Order_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>