force-app/main/default/objects/Order__c/fields/High_Value_Order__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Order__c</fullName>
    <formula>Order_Total__c &gt; 2000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High_Value_Order</label>
    <type>Checkbox</type>
</CustomField>