force-app/main/default/objects/Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Order_Number</label>
    <type>AutoNumber</type>
</CustomField>