force-app/main/default/objects/Order__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UNPAID</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
            <value>
                <fullName>REFUNDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>