force-app/main/default/objects/Order__c/fields/Refund_Approved__c.field-meta.xml
<CustomField>
    <fullName>Refund_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund_Approved</label>
    <type>Checkbox</type>
</CustomField>