force-app/main/default/objects/Order__c/fields/Refund_Request__c.field-meta.xml
<CustomField>
    <fullName>Refund_Request__c</fullName>
    <formula>ISPICKVAL( Support_Ticket__r.Issue_Type__c ,&apos;Refund Request&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Request</label>
    <type>Checkbox</type>
</CustomField>