force-app/main/default/objects/Order__c/fields/Requires_Manual_Action__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manual_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires_Manual_Action</label>
    <type>Checkbox</type>
</CustomField>