force-app/main/default/objects/Order__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Restaurant</label>
    <referenceTo>Restaurant__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>