force-app/main/default/objects/Order__c/fields/SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline__c</fullName>
    <formula>Order_Created_At__c + (SLA_Minutes__c / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA_Deadline</label>
    <type>DateTime</type>
</CustomField>