force-app/main/default/objects/Order__c/fields/SLA_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SLA_Minutes__c</fullName>
    <label>SLA_Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>