force-app/main/default/objects/Order__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <formula>IF( ISPICKVAL(Order_Status__c, &apos;DELIVERED&apos;) , &quot;COMPLETED&quot; ,IF(
    NOW() &gt; SLA_Deadline__c,
    &quot;BREACHED&quot;,
    IF(
        ( (SLA_Deadline__c - NOW()) * 1440 ) &lt;= (SLA_Minutes__c * 0.25),
        &quot;AT_RISK&quot;,
        &quot;ON_TRACK&quot;
    )
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA_Status</label>
    <type>Text</type>
</CustomField>