force-app/main/default/objects/Order__c/fields/SLA_Time_Remaining__c.field-meta.xml
<CustomField>
    <fullName>SLA_Time_Remaining__c</fullName>
    <formula>IF(SLA_Status__c=&apos;COMPLETED&apos;, 0, MAX(0, (SLA_Deadline__c - NOW()) * 1440))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA_Time_Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>