force-app/main/default/objects/Order__c/fields/Support_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Support_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support_Ticket</label>
    <referenceTo>Support_Ticket__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>