force-app/main/default/objects/Order__c/validationRules/Delivered_order_must_have_Delivery_Agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivered_order_must_have_Delivery_Agent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Order_Status__c, &quot;DELIVERED&quot;),
  ISBLANK(Delivery_Agent__c)
)</errorConditionFormula>
    <errorDisplayField>Delivery_Agent__c</errorDisplayField>
    <errorMessage>Delivered orders must have a Delivery Agent assigned</errorMessage>
</ValidationRule>