force-app/main/default/objects/Order__c/validationRules/Refund_amount_cannot_exceed_order_total.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_amount_cannot_exceed_order_total</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Refund_Requested__c = TRUE,
  Refund_Amount__c &gt; Order_Total__c
)</errorConditionFormula>
    <errorDisplayField>Refund_Amount__c</errorDisplayField>
    <errorMessage>Refund amount cannot exceed the order total.</errorMessage>
</ValidationRule>