force-app/main/default/objects/Order__c/validationRules/Refund_type_required_if_refund_requested.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_type_required_if_refund_requested</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Refund_Requested__c = TRUE,
   ISPICKVAL( Refund_Type__c , &quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Refund_Type__c</errorDisplayField>
    <errorMessage>Refund Type must be specified when a refund is requested.</errorMessage>
</ValidationRule>