force-app/main/default/objects/Order__c/validationRules/Temp_Closed_Restaurant_Cant_Take_Orders.validationRule-meta.xml
<ValidationRule>
    <fullName>Temp_Closed_Restaurant_Cant_Take_Orders</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Order_Status__c, &quot;CREATED&quot;),
  Restaurant__r.Is_Temporarily_Closed__c = TRUE
)</errorConditionFormula>
    <errorMessage>Restaurant is temporarily closed and cannot accept orders</errorMessage>
</ValidationRule>